# markdown-kit.nvim

./: .gitignore  .mise.toml  README.md  package.json
.github/workflows/: ci.yml  release.yml
apps/client/: package.json  vite.config.ts
apps/client/src/: App.tsx  app.css
apps/client/src/components/preview/: MermaidModal.tsx
apps/client/src/components/ui/: LiveBadge.tsx  ThemeToggle.tsx
apps/client/src/configs/: ws.ts
apps/client/src/hooks/: useDocumentTitle.ts  useMermaidModal.ts  usePreviewSocket.ts  usePreviewViewportSync.ts
apps/client/src/types/: types.d.ts
apps/client/src/utils/: mermaid.ts  scroll.ts
apps/core/: Cargo.toml
apps/core/examples/: render_demo.rs  test_markdown.rs  test_mermaid.rs
apps/core/src/: lib.rs  main.rs  markdown.rs  server.rs
apps/core/src/markdown/: escape.rs  flowchart_legacy.rs  highlight.rs  mermaid.rs  mod.rs  preprocess.rs
apps/core/tests/: flowchart_legacy.rs
apps/service/: index.ts  package.json
apps/service/types/: markdown-plugins.d.ts  types.ts
apps/service/utils/: browser.ts  markdown.ts
apps/web/: package.json  vite.config.ts
apps/web/src/: App.css  App.tsx
apps/web/src/components/ui/: ConnBadge.tsx  FollowCursorToggle.tsx
apps/web/src/hooks/: useDocumentTitle.ts  usePreviewSocket.ts  usePreviewViewportSync.ts
apps/web/src/types/: types.d.ts
apps/web/src/utils/: markdown.ts  number.ts  scroll.ts
lua/markdown_kit/: init.lua
nvim/autoload/: markdown_kit.vim
nvim/lua/markdown_kit/: init.lua
nvim/plugin/: markdown-kit.lua
scripts/: pre-commit.sh
(+3 files in other folders)
